updated opening paragraph

--- a/program-info.html
+++ b/program-info.html
@@ -180,7 +180,9 @@
         <div class="content">
           <h2 id="toc_0" class="program-info">Here's What You Need to Know</h2>
           <img id="img1" src="img/students-in-lab_cropped.jpg" alt="Students working together in computer lab">
-          <p>Digital Technology and Culture degree was started at WSU Vancouver and has since expanded to the Pullman and Tr-Cities campuses. In the Fall of 2022, these campuses unified the degree under a single department - the Department of Digital Technology and Culture.  The Creative Media & Digital Culture (The CMDC) program is the name of the Vancouver campus DTC, one of five signature programs on the WSU Vancouver and since the merger is called The CMDC in the Department of DTC. It integrates research and teaching in an
+          <p>In 1997 Chancellor Hal Dengerink, Head Librarian Leslie Wykoff, and Professor Tim Hunt founded the “Electronic Media & Communication” on the Vancouver campus to educate SWWA in the emerging field of digital media. It was designated as major in 2003 and renamed “Digital Technology & Culture.” At that time it spread to the Pullman and TriCities campuses and was managed by the English Department. In 2010 the DTC on the Vancouver campus became an independent program and was renamed the “Creative Media & Digital Culture” (CMDC) program. It grew from 44 majors in 2006 to over 200 in the next decade. In 2019 Pullman’s and TriCities’ DTC programs became independent. This made it possible for the three campuses to unify the degree under a single department - the Department of Digital Technology and Culture - with the CMDC retaining its name as the special Vancouver option in the fall 2022.</p>
+
+            <p>The CMDC remains one of five signature programs on the Vancouver campus. It integrates research and teaching in an
             intellectually-diverse, technologically innovative experience, applying inter-and transdisciplinary
             approaches that foster civic engagement from local-to-global contexts in the areas of Digital Humanities,
             media art, media communication, media studies, information systems.</p>
